--- a/css/main.scss
+++ b/css/main.scss
@@ -777,3 +777,20 @@ iframe.website {
     }
   }
 }
+
+.project-item {
+  height: 200px;
+
+  & > div {
+    height: 100%;
+    background-color: #1A1A1A;
+  }
+
+  .project-image {
+
+  }
+
+  .project-description {
+    margin: 5px;
+  }
+}
