--- a/styles.css
+++ b/styles.css
@@ -671,3 +671,138 @@ strong {
   right: 0;
   bottom: 0;
 }
+#resume {
+  width: 8.5in;
+  height: 11in;
+  margin: auto;
+  margin-top: 1in;
+  margin-bottom: 1in;
+  padding: 0.3in;
+  padding-top: 0.3in;
+  padding-left: 0.25in;
+  padding-right: 0.35in;
+  background-color: white;
+}
+@media print {
+  #resume {
+    margin: 0;
+  }
+}
+#resume * {
+  color: #444;
+  letter-spacing: auto;
+}
+#resume h1,
+#resume h2,
+#resume h3,
+#resume h4,
+#resume h5,
+#resume h6 {
+  color: #222;
+  margin: 0;
+  text-align: left;
+  font-weight: 300;
+}
+#resume h2 {
+  color: #40b727;
+}
+#resume p,
+#resume span,
+#resume li {
+  line-height: 1.1em;
+}
+@page {
+  margin: 0;
+}
+#resume header,
+#resume section {
+  width: 100%;
+  padding-left: 130px;
+  position: relative;
+}
+#resume #head .dot {
+  color: #40b727;
+}
+#resume #head h1 {
+  font-size: 60px;
+  letter-spacing: 26px;
+  margin: 0;
+  text-transform: uppercase;
+}
+#resume #head h2 {
+  font-size: 30px;
+  text-transform: uppercase;
+  letter-spacing: 3.3px;
+}
+#resume #head h3 {
+  font-size: 13px;
+  text-transform: uppercase;
+}
+#resume #head h3 a {
+  font-family: Raleway;
+}
+#resume #head img {
+  position: absolute;
+  left: 0px;
+  width: 100px;
+  margin-left: 7px;
+}
+#resume #head span {
+  margin: 0px 6px;
+}
+#resume #head a {
+  text-decoration: none;
+  color: inherit;
+}
+#resume section {
+  margin-top: 10px;
+}
+#resume section h1 {
+  text-transform: uppercase;
+  font-weight: 300;
+  position: absolute;
+  top: 1px;
+  left: 0px;
+  text-align: right;
+  width: 130px;
+  font-size: 16px;
+  padding-right: 20px;
+}
+#resume section .item .dot {
+  margin: 0px 10px;
+}
+#resume section .item h2 {
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: 600;
+}
+#resume section .item h2 .date {
+  font-weight: 400;
+}
+#resume section .item h3 {
+  font-weight: 600;
+  margin-top: 0.1em;
+  text-transform: uppercase;
+  font-size: 15px;
+}
+#resume section .item h3 .skills {
+  font-weight: 400;
+}
+#resume section ul {
+  list-style-type: circle;
+  margin: 0;
+  padding: 0;
+}
+#resume section ul li {
+  font-size: 13px;
+  margin-top: 0.2em;
+}
+#resume section p {
+  font-size: 13px;
+}
+#resume section strong {
+  font-weight: 500;
+}
+#resume section .item + .item {
+  margin-top: 10px;
+}
